--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/stundent_information
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+spring.jpa.show-sql= true
 server.port=8181
+logging.level.org.springframework=INFO
+#logging.level.web=debug
+#spring.security.user.name=user
+#spring.security.user.password=test
+
